cmake_minimum_required(VERSION 3.0.0)
project(
    Bluefoot 
    VERSION 0.1.0
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})

set(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/web/res")

SET(EXPORTED_FUNCTIONS_LIST "")

SET(COMMON_C_CXX_FLAGS "-sUSE_GLFW=3 -sASSERTIONS=1 -sWASM=1 -sASYNCIFY -sALLOW_MEMORY_GROWTH -sMODULARIZE=1 -sENVIRONMENT=web -sEXPORTED_RUNTIME_METHODS=ccall,cwrap,run -sEXIT_RUNTIME=1 -sEXPORTED_FUNCTIONS=${EXPORTED_FUNCTIONS_LIST} -Wno-unused-command-line-argument -Wno-deprecated-enum-compare-conditional")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COMMON_C_CXX_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMMON_C_CXX_FLAGS}")
set(CMAKE_EXECUTABLE_SUFFIX ".js") 

add_subdirectory(Bluefoot)